src/objects/My_Contact__c.object
<CustomObject>
    <description>Custom junction object to relate many users to many contacts and allow them to have &quot;My Contacts&quot; list views. Contacts within PostNord have multiple owners. System owner will be the record owner and users can relate themselves to a contact using this object. This object does not define record access (all users can update contact records).</description>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact_Person__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <formula>Contact_Person__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact_Person__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Postal_Addr_City__c</fullName>
        <formula>Contact_Person__r.Account.Postal_Address_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account Postal Addr City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Postal_Addr_Country__c</fullName>
        <formula>TEXT(Contact_Person__r.Account.Postal_Address_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account Postal Addr Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Postal_Addr_Postal_Code__c</fullName>
        <formula>Contact_Person__r.Account.Postal_Address_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account Postal Addr Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Postal_Addr_Street__c</fullName>
        <formula>Contact_Person__r.Account.Postal_Address_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account Postal Addr Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <formula>Contact_Person__r.Account.Name</formula>
        <label>Primary Account</label>
        <type>Text</type>
    </fields>
    <label>My Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact_Person__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Primary_Account_Postal_Addr_Street__c</columns>
        <columns>Primary_Account_Postal_Addr_Postal_Code__c</columns>
        <columns>Primary_Account_Postal_Addr_City__c</columns>
        <columns>Primary_Account_Postal_Addr_Country__c</columns>
        <columns>Phone__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>Contact_Person__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Primary_Account_Postal_Addr_Street__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Primary_Account_Postal_Addr_Postal_Code__c</columns>
        <columns>Primary_Account_Postal_Addr_City__c</columns>
        <columns>Primary_Account_Postal_Addr_Country__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Contact Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>